jniCheck.cpp:check_is_obj_array asserts on TypeArrayKlass::cast(aOop->klass())

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • b43
    • generic
    • generic

        RULE closed/runtime/4474873/Test4474873.sh Crash Internal Error ...typeArrayKlass.hpp...assert(k->oop_is_typeArray()) failed: cast to TypeArrayKlass

        Introduced by fix to JDK-6671508, jniCheck.cpp:check_is_obj_array() attempts to cast to type (primitive type array) to obtain element_type.

        The original "aOop->is_objArray()" test was sufficient.

        Must use -Xcheck:jni, needs more test infrastructure: flags testing and JNI native compile and link across platforms.

              Assignee:
              David Simms
              Reporter:
              David Simms
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: