8020697: jniCheck.cpp:check_is_obj_array asserts on TypeArrayKlass::cast(aOop->klass())

Reviewed-by: dcubed, fparain, dholmes